--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body style="background: black; color: white; text-align: center; padding: 4rem;">
   <h1>🌌 Cosmovision Creative</h1>
-  <p>We manifest visions for sacred enterprises.</p>
+  <p>Our Venture Studio manifests visions for sacred enterprises.</p>
 </body>
 </html>
