Test Text Update 4 index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body style="background: black; color: white; text-align: center; padding: 4rem;">
   <h1>🌌 Cosmovision Creative</h1>
-  <p>Venture Studio manifesting visions for sacred enterprises.</p>
+  <p>A Venture Studio devoted to manifesting visions for sacred enterprises..</p>
 </body>
 </html>
