Test Text - Update 6 -  index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body style="background: black; color: white; text-align: center; padding: 4rem;">
   <h1>🌌 Cosmovision Creative</h1>
-  <p>Visionary venture building for sacred enterprises.</p>
+  <p>"Where visionary ideas blossom into sacred ventures.</p>
 </body>
 </html>
