Test Sparkle Text - Update 6 -  index.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
-<!-- Triggering redeploy: just adding a comment -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cosmovision Creative</title>
-</head>
-<body style="background: black; color: white; text-align: center; padding: 4rem;">
-  <h1>🌌 Cosmovision Creative</h1>
-  <p>Where visionary ideas blossom into sacred ventures.</p>
-</body>
-</html>
+  <style>
+    body {
+      background: linear-gradient(to bottom, #000010, #1a001a);
+      color: white;
+      text-align: center;
+      font-family: 'Helvetica Neue', sans
