Sparkle Test Text - Update 6 -  index.html

--- a/index.html
+++ b/index.html
@@ -9,4 +9,40 @@
       background: linear-gradient(to bottom, #000010, #1a001a);
       color: white;
       text-align: center;
-      font-family: 'Helvetica Neue', sans
+      font-family: 'Helvetica Neue', sans-serif;
+      padding: 4rem 1rem;
+    }
+
+    img.logo {
+      width: 120px;
+      height: auto;
+      margin-bottom: 1rem;
+      border-radius: 12px;
+      box-shadow: 0 0 12px rgba(255, 255, 255, 0.2);
+    }
+
+    h1.headline {
+      font-size: 2rem;
+      font-weight: 600;
+      color: #ffffff;
+      text-shadow: 0 0 10px rgba(255, 255, 255, 0.3), 0 0 20px rgba(186, 85, 211, 0.4);
+      margin-top: 1rem;
+    }
+
+    p.subheadline {
+      font-size: 1.2rem;
+      font-weight: 400;
+      color: #e0e0e0;
+      text-shadow: 0 0 8px rgba(255, 255, 255, 0.2);
+      margin-top: 0.5rem;
+    }
+  </style>
+</head>
+<body>
+  <!-- Logo from LinkedIn (update this to your preferred file when ready) -->
+  <img class="logo" src="https://media.licdn.com/dms/image/D560BAQFuhJuFZf2Qmw/company-logo_200_200/0/1711317299069/cosmovisioncreative_logo?e=2147483647&v=beta&t=p3_cI3REuStT7ZnID1Q_pkhZMBNm5h8pFQKXhDLWRR4" alt="Cosmovision Creative Logo" />
+
+  <h1 class="headline">A venture studio where sacred visions blossom into soulful enterprises.</h1>
+  <p class="subheadline">Guiding sacred entrepreneurs from vision to launch.</p>
+</body>
+</html>
