White Logo - Update 6 -  index.html

--- a/index.html
+++ b/index.html
@@ -4,44 +4,53 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cosmovision Creative</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      background: linear-gradient(to bottom, #000010, #1a001a);
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background: radial-gradient(circle at top left, #3a0ca3, #7209b7, #4361ee, #4cc9f0);
       color: white;
       text-align: center;
-      font-family: 'Helvetica Neue', sans-serif;
       padding: 4rem 1rem;
+      min-height: 100vh;
+      background-attachment: fixed;
+      background-size: cover;
+      animation: sparkle 20s linear infinite;
+    }
+
+    @keyframes sparkle {
+      0% { filter: brightness(1); }
+      50% { filter: brightness(1.1); }
+      100% { filter: brightness(1); }
     }
 
     img.logo {
       width: 120px;
       height: auto;
-      margin-bottom: 1rem;
-      border-radius: 12px;
-      box-shadow: 0 0 12px rgba(255, 255, 255, 0.2);
+      margin-bottom: 1.5rem;
+      border-radius: 16px;
+      box-shadow: 0 0 25px rgba(255, 255, 255, 0.3);
     }
 
     h1.headline {
       font-size: 2rem;
       font-weight: 600;
-      color: #ffffff;
-      text-shadow: 0 0 10px rgba(255, 255, 255, 0.3), 0 0 20px rgba(186, 85, 211, 0.4);
-      margin-top: 1rem;
+      color: #fff;
+      text-shadow: 0 0 10px rgba(255, 255, 255, 0.4), 0 0 25px rgba(255, 215, 255, 0.3);
+      margin-bottom: 0.75rem;
     }
 
     p.subheadline {
-      font-size: 1.2rem;
+      font-size: 1.25rem;
       font-weight: 400;
-      color: #e0e0e0;
-      text-shadow: 0 0 8px rgba(255, 255, 255, 0.2);
-      margin-top: 0.5rem;
+      color: #e6e6ff;
+      text-shadow: 0 0 6px rgba(255, 255, 255, 0.2);
     }
   </style>
 </head>
 <body>
-  <!-- Logo from LinkedIn (update this to your preferred file when ready) -->
-  <img class="logo" src="https://media.licdn.com/dms/image/D560BAQFuhJuFZf2Qmw/company-logo_200_200/0/1711317299069/cosmovisioncreative_logo?e=2147483647&v=beta&t=p3_cI3REuStT7ZnID1Q_pkhZMBNm5h8pFQKXhDLWRR4" alt="Cosmovision Creative Logo" />
-
+  <img class="logo" src="cosmovision-logo.png" alt="Cosmovision Creative Logo" />
   <h1 class="headline">A venture studio where sacred visions blossom into soulful enterprises.</h1>
   <p class="subheadline">Guiding sacred entrepreneurs from vision to launch.</p>
 </body>
