Stargate background - Update 8 -  index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cosmovision Creative</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
@@ -12,72 +12,19 @@
       box-sizing: border-box;
     }
 
-    body, html {
-      height: 100%;
+    body {
       font-family: 'Poppins', sans-serif;
       color: white;
-      overflow: hidden;
-    }
-
-    /* Full-screen video */
-    .background-video {
-      position: fixed;
-      top: 0;
-      left: 0;
-      min-width: 100%;
-      min-height: 100%;
-      z-index: -1;
-      object-fit: cover;
-    }
-
-    .content {
+      text-align: center;
       position: relative;
-      z-index: 1;
-      height: 100%;
+      height: 100vh;
+      overflow: hidden;
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
-      text-align: center;
       padding: 2rem;
-      background: rgba(0, 0, 0, 0.5); /* slight overlay for readability */
     }
 
-    img.logo {
-      width: 120px;
-      border-radius: 12px;
-      margin-bottom: 1.5rem;
-      box-shadow: 0 0 12px rgba(255, 255, 255, 0.2);
-    }
-
-    h1 {
-      font-size: 2rem;
-      text-shadow: 0 0 10px rgba(255, 255, 255, 0.3),
-                   0 0 20px rgba(186, 85, 211, 0.4);
-    }
-
-    p {
-      margin-top: 0.8rem;
-      font-size: 1.1rem;
-      color: #e0e0e0;
-      text-shadow: 0 0 8px rgba(255, 255, 255, 0.2);
-    }
-  </style>
-</head>
-<body>
-
-  <!-- Fullscreen Background Video -->
-  <video autoplay muted loop playsinline class="background-video">
-    <source src="background-video.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
-
-  <!-- Overlay Content -->
-  <div class="content">
-    <img class="logo" src="cosmovision-logo.png" alt="Cosmovision Creative Logo" />
-    <h1>A venture studio where sacred visions blossom into soulful enterprises.</h1>
-    <p>Guiding sacred entrepreneurs from vision to launch.</p>
-  </div>
-
-</body>
-</html>
+    video.bg-video {
+      position: fixed;
+      top:
