--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cosmovision Creative</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
@@ -13,4 +13,94 @@
     }
 
     body, html {
-      height
+      height: 100%;
+      font-family: 'Poppins', sans-serif;
+      overflow: hidden;
+    }
+
+    .video-background {
+      position: fixed;
+      top: 0;
+      left: 0;
+      min-width: 100%;
+      min-height: 100%;
+      z-index: -1;
+      object-fit: cover;
+      animation: softLoop 20s ease-in-out infinite;
+    }
+
+    @keyframes softLoop {
+      0%, 95% {
+        opacity: 1;
+      }
+      100% {
+        opacity: 0.95;
+      }
+    }
+
+    .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      color: white;
+      padding: 2rem;
+    }
+
+    h1.headline {
+      font-size: 2rem;
+      font-weight: 400;
+      text-shadow: 0 0 10px rgba(255, 255, 255, 0.4),
+                   0 0 20px rgba(173, 216, 230, 0.2);
+      margin-bottom: 1rem;
+    }
+
+    p.subheadline {
+      font-size: 1.15rem;
+      font-weight: 300;
+      text-shadow: 0 0 6px rgba(255, 255, 255, 0.2);
+      margin-bottom: 2rem;
+    }
+
+    .cta-link {
+      font-size: 1.1rem;
+      color: #fff;
+      text-decoration: none;
+      border: 1px solid rgba(255, 255, 255, 0.4);
+      padding: 0.6rem 1.2rem;
+      border-radius: 8px;
+      transition: all 0.3s ease;
+      box-shadow: 0 0 16px rgba(255, 255, 255, 0.3);
+      background-color: rgba(255, 255, 255, 0.1);
+    }
+
+    .cta-link:hover {
+      background-color: rgba(255, 255, 255, 0.4);
+      color: #000;
+      box-shadow: 0 0 24px rgba(255, 255, 255, 0.6);
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Background Video -->
+  <video autoplay muted loop playsinline class="video-background" id="bg-video">
+    <source src="cosmos-video.mp4" type="video/mp4" />
+    Your browser does not support the video tag.
+  </video>
+
+  <div class="overlay">
+    <h1 class="headline">A venture studio where sacred visions blossom into soulful enterprises.</h1>
+    <p class="subheadline">Guiding sacred entrepreneurs from vision to launch.</p>
+    <a href="https://tally.so/r/wggaWd" target="_blank" class="cta-link">✨ Enter the Stargate ✨</a>
+  </div>
+
+</body>
+</html>
