--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cosmovision Creative</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
@@ -26,16 +26,6 @@
       min-height: 100%;
       z-index: -1;
       object-fit: cover;
-      animation: softLoop 20s ease-in-out infinite;
-    }
-
-    @keyframes softLoop {
-      0%, 95% {
-        opacity: 1;
-      }
-      100% {
-        opacity: 0.95;
-      }
     }
 
     .overlay {
@@ -54,16 +44,24 @@
       padding: 2rem;
     }
 
+    img.logo {
+      width: 120px;
+      height: auto;
+      margin-bottom: 1rem;
+      border-radius: 12px;
+      box-shadow: 0 0 12px rgba(255, 255, 255, 0.2);
+    }
+
     h1.headline {
-      font-size: 2rem;
-      font-weight: 400;
-      text-shadow: 0 0 10px rgba(255, 255, 255, 0.4),
-                   0 0 20px rgba(173, 216, 230, 0.2);
+      font-size: 2.2rem;
+      font-weight: 500;
+      text-shadow: 0 0 10px rgba(255, 255, 255, 0.5),
+                   0 0 20px rgba(173, 216, 230, 0.3);
       margin-bottom: 1rem;
     }
 
     p.subheadline {
-      font-size: 1.15rem;
+      font-size: 1.2rem;
       font-weight: 300;
       text-shadow: 0 0 6px rgba(255, 255, 255, 0.2);
       margin-bottom: 2rem;
@@ -77,14 +75,14 @@
       padding: 0.6rem 1.2rem;
       border-radius: 8px;
       transition: all 0.3s ease;
-      box-shadow: 0 0 16px rgba(255, 255, 255, 0.3);
+      box-shadow: 0 0 12px rgba(255, 255, 255, 0.2);
       background-color: rgba(255, 255, 255, 0.1);
     }
 
     .cta-link:hover {
-      background-color: rgba(255, 255, 255, 0.4);
+      background-color: rgba(255, 255, 255, 0.3);
       color: #000;
-      box-shadow: 0 0 24px rgba(255, 255, 255, 0.6);
+      box-shadow: 0 0 18px rgba(255, 255, 255, 0.4);
     }
   </style>
 </head>
@@ -97,6 +95,7 @@
   </video>
 
   <div class="overlay">
+    <img src="cosmovision-logo.png" alt="Cosmovision Logo" class="logo" />
     <h1 class="headline">A venture studio where sacred visions blossom into soulful enterprises.</h1>
     <p class="subheadline">Guiding sacred entrepreneurs from vision to launch.</p>
     <a href="https://tally.so/r/wggaWd" target="_blank" class="cta-link">✨ Enter the Stargate ✨</a>
