Softer looping - Update 13 -  index.html
simulate a soft fade transition between loops using a small bit of JavaScript and CSS. This will fade out the video right before the end and fade it back in when it restarts.

Same video file: cosmos-video.mp4

We’ll use a <div class="fade-layer"> overlay to fade it in/out

A short JavaScript snippet to handle the timing of fade effects based on video duration

--- a/index.html
+++ b/index.html
@@ -14,4 +14,27 @@
 
     body, html {
       height: 100%;
-      font-family: 'Poppins',
+      font-family: 'Poppins', sans-serif;
+      overflow: hidden;
+    }
+
+    .video-background {
+      position: fixed;
+      top: 0;
+      left: 0;
+      min-width: 100%;
+      min-height: 100%;
+      z-index: -2;
+      object-fit: cover;
+    }
+
+    .fade-layer {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: black;
+      z-index: -1;
+      opacity: 0;
+      transition: opacity 1s ease
