--- a/index.html
+++ b/index.html
@@ -12,29 +12,78 @@
       box-sizing: border-box;
     }
 
-    body, html {
+    html, body {
       height: 100%;
       font-family: 'Poppins', sans-serif;
       overflow: hidden;
+      background: black;
     }
 
     .video-background {
       position: fixed;
       top: 0;
       left: 0;
-      min-width: 100%;
-      min-height: 100%;
-      z-index: -2;
-      object-fit: cover;
-    }
-
-    .fade-layer {
-      position: fixed;
-      top: 0;
-      left: 0;
       width: 100%;
       height: 100%;
-      background: black;
-      z-index: -1;
-      opacity: 0;
-      transition: opacity 1s ease
+      object-fit: cover;
+      z-index: -2;
+      animation: fadeIn 2s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      color: white;
+      padding: 2rem;
+      z-index: 1;
+    }
+
+    .logo {
+      width: 100px;
+      height: auto;
+      margin-bottom: 1.5rem;
+      border-radius: 10px;
+      box-shadow: 0 0 12px rgba(255, 255, 255, 0.3);
+    }
+
+    h1.headline {
+      font-size: 1.9rem;
+      font-weight: 400;
+      color: #f0f0f0;
+      text-shadow: 0 0 8px rgba(255, 255, 255, 0.3),
+                   0 0 12px rgba(186, 85, 211, 0.3);
+      margin-bottom: 1rem;
+    }
+
+    p.subheadline {
+      font-size: 1.1rem;
+      font-weight: 300;
+      color: #dddddd;
+      text-shadow: 0 0 6px rgba(255, 255, 255, 0.2);
+      margin-bottom: 2rem;
+    }
+
+    .cta-link {
+      font-size: 1.1rem;
+      color: #fff;
+      text-decoration: none;
+      border: 1px solid rgba(255, 255, 255, 0.4);
+      padding: 0.6rem 1.2rem;
+      border-radius: 8px;
+      transition: all 0.3s ease;
+      box-shadow: 0 0 12px rgba(255, 255, 255, 0.2);
+      background-color: rgba(255, 255, 255, 0.
