--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cosmovision Creative</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
@@ -12,78 +12,72 @@
       box-sizing: border-box;
     }
 
-    html, body {
+    body, html {
       height: 100%;
       font-family: 'Poppins', sans-serif;
+      color: white;
       overflow: hidden;
-      background: black;
     }
 
-    .video-background {
+    /* Full-screen video */
+    .background-video {
       position: fixed;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 100%;
+      min-width: 100%;
+      min-height: 100%;
+      z-index: -1;
       object-fit: cover;
-      z-index: -2;
-      animation: fadeIn 2s ease-in-out;
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-
-    .overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
+    .content {
+      position: relative;
+      z-index: 1;
       height: 100%;
-      width: 100%;
-      background: rgba(0, 0, 0, 0.5);
       display: flex;
       flex-direction: column;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       text-align: center;
-      color: white;
       padding: 2rem;
-      z-index: 1;
+      background: rgba(0, 0, 0, 0.5); /* slight overlay for readability */
     }
 
-    .logo {
-      width: 100px;
-      height: auto;
+    img.logo {
+      width: 120px;
+      border-radius: 12px;
       margin-bottom: 1.5rem;
-      border-radius: 10px;
-      box-shadow: 0 0 12px rgba(255, 255, 255, 0.3);
-    }
-
-    h1.headline {
-      font-size: 1.9rem;
-      font-weight: 400;
-      color: #f0f0f0;
-      text-shadow: 0 0 8px rgba(255, 255, 255, 0.3),
-                   0 0 12px rgba(186, 85, 211, 0.3);
-      margin-bottom: 1rem;
-    }
-
-    p.subheadline {
-      font-size: 1.1rem;
-      font-weight: 300;
-      color: #dddddd;
-      text-shadow: 0 0 6px rgba(255, 255, 255, 0.2);
-      margin-bottom: 2rem;
-    }
-
-    .cta-link {
-      font-size: 1.1rem;
-      color: #fff;
-      text-decoration: none;
-      border: 1px solid rgba(255, 255, 255, 0.4);
-      padding: 0.6rem 1.2rem;
-      border-radius: 8px;
-      transition: all 0.3s ease;
       box-shadow: 0 0 12px rgba(255, 255, 255, 0.2);
-      background-color: rgba(255, 255, 255, 0.
+    }
+
+    h1 {
+      font-size: 2rem;
+      text-shadow: 0 0 10px rgba(255, 255, 255, 0.3),
+                   0 0 20px rgba(186, 85, 211, 0.4);
+    }
+
+    p {
+      margin-top: 0.8rem;
+      font-size: 1.1rem;
+      color: #e0e0e0;
+      text-shadow: 0 0 8px rgba(255, 255, 255, 0.2);
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Fullscreen Background Video -->
+  <video autoplay muted loop playsinline class="background-video">
+    <source src="background-video.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+
+  <!-- Overlay Content -->
+  <div class="content">
+    <img class="logo" src="cosmovision-logo.png" alt="Cosmovision Creative Logo" />
+    <h1>A venture studio where sacred visions blossom into soulful enterprises.</h1>
+    <p>Guiding sacred entrepreneurs from vision to launch.</p>
+  </div>
+
+</body>
+</html>
