--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   </video>
 
   <div class="overlay">
-    <img src="cosmovision-logo.png" alt="Cosmovision Logo" class="logo" />
+    <img src="cosmos-logo.png" alt="Cosmovision Logo" class="logo" />
     <h1 class="headline">A venture studio where sacred visions blossom into soulful enterprises.</h1>
     <p class="subheadline">Guiding sacred entrepreneurs from vision to launch.</p>
     <a href="https://tally.so/r/wggaWd" target="_blank" class="cta-link">✨ Enter the Stargate ✨</a>
