--- a/index.html
+++ b/index.html
@@ -54,52 +54,4 @@
 
     h1.headline {
       font-size: 2.2rem;
-      font-weight: 500;
-      text-shadow: 0 0 10px rgba(255, 255, 255, 0.5),
-                   0 0 20px rgba(173, 216, 230, 0.3);
-      margin-bottom: 1rem;
-    }
-
-    p.subheadline {
-      font-size: 1.2rem;
-      font-weight: 300;
-      text-shadow: 0 0 6px rgba(255, 255, 255, 0.2);
-      margin-bottom: 2rem;
-    }
-
-    .cta-link {
-      font-size: 1.1rem;
-      color: #fff;
-      text-decoration: none;
-      border: 1px solid rgba(255, 255, 255, 0.4);
-      padding: 0.6rem 1.2rem;
-      border-radius: 8px;
-      transition: all 0.3s ease;
-      box-shadow: 0 0 12px rgba(255, 255, 255, 0.2);
-      background-color: rgba(255, 255, 255, 0.1);
-    }
-
-    .cta-link:hover {
-      background-color: rgba(255, 255, 255, 0.3);
-      color: #000;
-      box-shadow: 0 0 18px rgba(255, 255, 255, 0.4);
-    }
-  </style>
-</head>
-<body>
-
-  <!-- Background Video -->
-  <video autoplay muted loop playsinline class="video-background" id="bg-video">
-    <source src="cosmos-video.mp4" type="video/mp4" />
-    Your browser does not support the video tag.
-  </video>
-
-  <div class="overlay">
-    <img src="cosmos-logo.png" alt="Cosmovision Logo" class="logo" />
-    <h1 class="headline">A venture studio where sacred visions blossom into soulful enterprises.</h1>
-    <p class="subheadline">Guiding sacred entrepreneurs from vision to launch.</p>
-    <a href="https://tally.so/r/wggaWd" target="_blank" class="cta-link">✨ Enter the Stargate ✨</a>
-  </div>
-
-</body>
-</html>
+      font-weight: 500
