--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
 <body>
 
   <!-- Background Video -->
-  <video autoplay muted playsinline class="video-background" id="bg-video">
+  <video autoplay muted loop playsinline class="video-background" id="bg-video">
     <source src="cosmos-video.mp4" type="video/mp4" />
     Your browser does not support the video tag.
   </video>
 
   <div class="overlay">
-    <img src="cosmos-logo.png" alt="Cosmovision Logo" class="logo" />
+    <img src="cosmovision-logo.png" alt="Cosmovision Logo" class="logo" />
     <h1 class="headline">A venture studio where sacred visions blossom into soulful enterprises.</h1>
     <p class="subheadline">Guiding sacred entrepreneurs from vision to launch.</p>
     <a href="https://tally.so/r/wggaWd" target="_blank" class="cta-link">✨ Enter the Stargate ✨</a>
